--- a/client_packages/browser/css/shop.css
+++ b/client_packages/browser/css/shop.css
@@ -129,8 +129,13 @@
 }
 
 #shop .main .body .content .items .item img {
+    width: 7.68vh;
     height: 7.68vh;
+    max-width: 100%;
+    max-height: 7.68vh;
     margin: 0 auto;
+    object-fit: contain;
+    display: block;
 }
 
 #shop .main .body .content .items .item .name {
